syntax = "proto3";

option go_package = "github.com/vortex14/grpc";

message Task {

  string message = 1;

}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Dialog(stream Task) returns (stream Task) {}
}




// The request message containing the user's name.
message HelloRequest {
  optional string name = 1;
}

// The response message containing the greetings
message HelloReply {
  optional string message = 1;
}